[gd_scene load_steps=5 format=2]

[ext_resource path="res://OAuth2/OAuth2Example.gd" type="Script" id=1]
[ext_resource path="res://OAuth2/signin-button.png" type="Texture" id=2]
[ext_resource path="res://DroidSans-Bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="OAuth2" type="Control"]
modulate = Color( 0.878431, 0.878431, 0.878431, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -191.0
margin_right = 191.0
custom_constants/separation = 10
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
margin_top = 264.0
margin_right = 382.0
margin_bottom = 646.0
rect_min_size = Vector2( 382, 382 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 656.0
margin_right = 382.0
margin_bottom = 713.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true

[node name="GoogleButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 723.0
margin_right = 382.0
margin_bottom = 815.0
texture_normal = ExtResource( 2 )

[connection signal="mouse_entered" from="VBoxContainer/GoogleButton" to="." method="_on_GoogleButton_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/GoogleButton" to="." method="_on_GoogleButton_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/GoogleButton" to="." method="_on_GoogleButton_pressed"]
